--- a/Index.html
+++ b/Index.html
@@ -240,11 +240,11 @@
     <footer class="jumbotron mb-0 mt-5 text-center ">
         <h5>Follow Us</h5>
         <p>All rights reserved</p>
-        <a href="https://www.instagram.com ">
+        <a href="https://www.instagram.com/art_connection16/ ">
             <img class="footer-logo mx-3 my-2 " src="image/instagram.png " alt="instagram " />
             <span style="color: black; font-size:20px; font-family: Calibri; ">@ArtConnection16</span>
         </a>
-        <a href="https:twitter.com ">
+        <a href="https://twitter.com/ArtConnection16 ">
             <img class="footer-logo mx-3 my-2 " src="image/twitter.png " alt="Twitter " />
         </a>
     </footer>
