--- a/Index.html
+++ b/Index.html
@@ -153,7 +153,7 @@
             </div>
         </div> -->
         <dir>
-            <H1 class="ml-5 mr-auto mt-2 ">Art</H1>
+            <H1 class="ml-5 mr-auto mt-2 " style="text-align: center;">Art</H1>
         </dir>
         <div class="container " id="shift ">
             <div class="row ">
