--- a/Index.html
+++ b/Index.html
@@ -101,7 +101,7 @@
                 <div class="card col-sm mx-3 my-2 " style="width: 18rem; ">
                     <img src="image/Craft/mansion.jpg " class="card-img-top mt-3 " alt="Wall2 ">
                     <div class="card-body ">
-                        <h5 class="card-title ">Mold Diamond</h5>
+                        <h5 class="card-title ">The Mansion</h5>
                         <p class="card-text ">Dope wallpaper which is best fit for you laptop and make you own setups awesome
                         </p>
 
@@ -153,7 +153,7 @@
             </div>
         </div> -->
         <dir>
-            <H1 class="ml-5 mr-auto mt-2 " style="text-align: center;">Art</H1>
+            <H1 class=" mt-2 " style="text-align: center;">Art</H1>
         </dir>
         <div class="container " id="shift ">
             <div class="row ">
